--- a/wasm-bs-photo-app-1/wasm-bs-photo-app-1.csproj
+++ b/wasm-bs-photo-app-1/wasm-bs-photo-app-1.csproj
@@ -18,12 +18,24 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Update="Pages\MyImagesTest2Api.razor">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+    </Content>
     <Content Update="Pages\MyImagesTest1.razor">
       <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
     </Content>
     <Content Update="Pages\FileManagerTest1.razor">
       <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
     </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Pages\MyImagesTest1.razor.css">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+    </None>
+    <None Update="Pages\MyImagesTest2Api.razor.css">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+    </None>
   </ItemGroup>
 
 </Project>
